# NanoUSD

./: CMakeLists.txt  pyproject.toml  vcpkg.json
examples/: motion_plan.py  pyproject.toml
src/pxr/base/: CMakeLists.txt
src/pxr/base/arch/: CMakeLists.txt  align.cpp  align.h  api.h  assumptions.cpp  attributes.cpp  attributes.h  buildMode.h  daemon.cpp  daemon.h  debugger.cpp  debugger.h  defines.h  demangle.cpp  demangle.h  env.cpp  env.h  errno.cpp  errno.h  error.cpp  error.h  export.h  fileSystem.cpp  fileSystem.h  function.cpp  function.h  functionLite.h  hash.cpp  hash.h  hints.h  initConfig.cpp  inttypes.h  library.cpp  library.h  mallocHook.cpp  mallocHook.h  math.h  pragmas.h  regex.cpp  regex.h  (+16 more)
src/pxr/base/gf/: CMakeLists.txt  api.h  bbox3d.cpp  bbox3d.h  camera.cpp  camera.h  color.cpp  color.h  colorSpace.cpp  colorSpace.h  colorSpace_data.h  declare.h  dualQuatd.cpp  dualQuatd.h  dualQuatf.cpp  dualQuatf.h  dualQuath.cpp  dualQuath.h  frustum.cpp  frustum.h  gamma.cpp  gamma.h  half.h  homogeneous.cpp  homogeneous.h  ilmbase_eLut.h  ilmbase_half.cpp  ilmbase_half.h  ilmbase_halfLimits.h  ilmbase_toFloat.h  interval.cpp  interval.h  line.cpp  line.h  line2d.cpp  line2d.h  lineSeg.cpp  lineSeg.h  lineSeg2d.cpp  lineSeg2d.h  (+83 more)
src/pxr/base/js/: CMakeLists.txt  api.h  converter.h  json.cpp  json.h  types.h  utils.cpp  utils.h  value.cpp  value.h
src/pxr/base/plug/: CMakeLists.txt
src/pxr/base/tf/: CMakeLists.txt  anyUniquePtr.h  anyWeakPtr.cpp  anyWeakPtr.h  api.h  atomicOfstreamWrapper.cpp  atomicOfstreamWrapper.h  atomicRenameUtil.cpp  atomicRenameUtil.h  bigRWMutex.cpp  bigRWMutex.h  bitUtils.h  bits.cpp  bits.h  callContext.h  compressedBits.cpp  compressedBits.h  cxxCast.h  debug.cpp  debug.h  debugCodes.cpp  debugCodes.h  debugNotice.cpp  debugNotice.h  declarePtrs.h  delegatedCountPtr.h  denseHashMap.h  denseHashSet.cpp  denseHashSet.h  diagnostic.cpp  diagnostic.h  diagnosticBase.cpp  diagnosticBase.h  diagnosticHelper.cpp  diagnosticHelper.h  diagnosticLite.h  diagnosticMgr.cpp  diagnosticMgr.h  dl.cpp  dl.h  (+147 more)
src/pxr/base/trace/: CMakeLists.txt  aggregateNode.cpp  aggregateNode.h  aggregateTree.cpp  aggregateTree.h  aggregateTreeBuilder.cpp  aggregateTreeBuilder.h  api.h  category.cpp  category.h  collection.cpp  collection.h  collectionNotice.cpp  collectionNotice.h  collector.cpp  collector.h  concurrentList.h  counterAccumulator.cpp  counterAccumulator.h  dataBuffer.cpp  dataBuffer.h  dynamicKey.h  event.cpp  event.h  eventContainer.cpp  eventContainer.h  eventData.cpp  eventData.h  eventList.cpp  eventList.h  eventNode.cpp  eventNode.h  eventTree.cpp  eventTree.h  eventTreeBuilder.cpp  eventTreeBuilder.h  jsonSerialization.cpp  jsonSerialization.h  key.h  module.cpp  (+20 more)
src/pxr/base/ts/: CMakeLists.txt  README.md  TsTest_Baseliner.py  TsTest_Comparator.py  TsTest_Grapher.py  TsTest_MayapyDriver.py  TsTest_MayapyEvaluator.py  __init__.py  api.h  binary.cpp  binary.h  debugCodes.cpp  debugCodes.h  eval.cpp  eval.h  knot.cpp  knot.h  knotData.cpp  knotData.h  knotMap.cpp  knotMap.h  module.cpp  moduleDeps.cpp  pch.h  raii.cpp  raii.h  regressionPreventer.cpp  regressionPreventer.h  spline.cpp  spline.h  splineData.cpp  splineData.h  tangentConversions.cpp  tangentConversions.h  tsTest_AnimXEvaluator.cpp  tsTest_AnimXEvaluator.h  tsTest_Museum.cpp  tsTest_Museum.h  tsTest_SampleBezier.cpp  tsTest_SampleBezier.h  (+26 more)
src/pxr/base/vt/: CMakeLists.txt  api.h  array.cpp  array.h  arrayPyBuffer.cpp  arrayPyBuffer.h  dictionary.cpp  dictionary.h  hash.cpp  hash.h  module.cpp  moduleDeps.cpp  pch.h  pyOperators.h  streamOut.cpp  streamOut.h  traits.h  typeHeaders.h  types.cpp  types.h  value.cpp  value.h  valueFromPython.cpp  valueFromPython.h  visitValue.h
src/pxr/base/work/: CMakeLists.txt  api.h  detachedTask.cpp  detachedTask.h  dispatcher.cpp  dispatcher.h  loops.h  module.cpp  moduleDeps.cpp  pch.h  reduce.h  singularTask.h  sort.h  threadLimits.cpp  utils.cpp  utils.h  withScopedParallelism.h
src/pxr/usd/: CMakeLists.txt
src/pxr/usd/ar/: CMakeLists.txt  api.h  asset.cpp  asset.h  assetInfo.cpp  assetInfo.h  debugCodes.cpp  debugCodes.h  defaultResolver.cpp  defaultResolver.h  defaultResolverContext.cpp  defaultResolverContext.h  definePackageResolver.h  defineResolver.h  defineResolverContext.h  filesystemAsset.cpp  filesystemAsset.h  filesystemWritableAsset.cpp  filesystemWritableAsset.h  inMemoryAsset.cpp  inMemoryAsset.h  module.cpp  moduleDeps.cpp  notice.cpp  notice.h  packageResolver.cpp  packageResolver.h  packageUtils.cpp  packageUtils.h  pch.h  pyResolverContext.h  resolvedPath.h  resolver.cpp  resolver.h  resolverContext.cpp  resolverContext.h  resolverContextBinder.cpp  resolverContextBinder.h  resolverScopedCache.cpp  resolverScopedCache.h  (+4 more)
src/pxr/usd/kind/: CMakeLists.txt  api.h  module.cpp  moduleDeps.cpp  pch.h  registry.cpp  registry.h
src/pxr/usd/ndr/: CMakeLists.txt  api.h  debugCodes.cpp  debugCodes.h  declare.cpp  declare.h  discoveryPlugin.cpp  discoveryPlugin.h  filesystemDiscovery.cpp  filesystemDiscovery.h  filesystemDiscoveryHelpers.cpp  filesystemDiscoveryHelpers.h  module.cpp  moduleDeps.cpp  node.cpp  node.h  nodeDiscoveryResult.h  parserPlugin.cpp  parserPlugin.h  pch.h  property.cpp  property.h  registry.cpp  registry.h  sdfTypeIndicator.cpp  sdfTypeIndicator.h
src/pxr/usd/pcp/: CMakeLists.txt  api.h  arc.h  cache.cpp  cache.h  changes.cpp  changes.h  composeSite.cpp  composeSite.h  debugCodes.cpp  debugCodes.h  dependencies.cpp  dependencies.h  dependency.cpp  dependency.h  dependentNamespaceEditUtils.cpp  dependentNamespaceEditUtils.h  diagnostic.cpp  diagnostic.h  dynamicFileFormatContext.cpp  dynamicFileFormatContext.h  dynamicFileFormatDependencyData.cpp  dynamicFileFormatDependencyData.h  dynamicFileFormatInterface.cpp  dynamicFileFormatInterface.h  errors.cpp  errors.h  expressionVariables.cpp  expressionVariables.h  expressionVariablesDependencyData.cpp  expressionVariablesDependencyData.h  expressionVariablesSource.cpp  expressionVariablesSource.h  instanceKey.cpp  instanceKey.h  instancing.cpp  instancing.h  (+46 more)
(+989 files in other folders)
