[tool.poetry]
name = "nanoUSD-examples"
version = "0.1.0"
description = ""
authors = ["yangfengzzz <yangfengzzz@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "<2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
