add_subdirectory(arch) # Architecture Dependent
add_subdirectory(tf) # Tools Foundations(py)

add_subdirectory(gf) # Graphics Foundations(py)
add_subdirectory(plug) # Plugin Framework(py)
add_subdirectory(vt) # Value Types(py)
add_subdirectory(work) # Multi-threaded Dispatch(py)

add_subdirectory(js) # JSON I/O
add_subdirectory(trace) # Performance tracking(py)

#add_subdirectory(ts) # Time Splines(py)
#add_subdirectory(pegtl) # Parsing Expression Grammar Template Library