add_subdirectory(arch) # Architecture Dependent
add_subdirectory(js) # JSON I/O
#add_subdirectory(pegtl) # Parsing Expression Grammar Template Library
add_subdirectory(tf) # Tools Foundations(py, module)

add_subdirectory(gf) # Graphics Foundations(py, module)
add_subdirectory(plug) # Plugin Framework(py, module)
add_subdirectory(vt) # Value Types(py, module)
add_subdirectory(work) # Multi-threaded Dispatch(py, module)
add_subdirectory(trace) # Performance tracking(py, module)
#add_subdirectory(ts) # Time Splines(py, module)
