add_subdirectory(ar) # Asset Resolution
add_subdirectory(kind)
add_subdirectory(ndr)
add_subdirectory(pcp)
add_subdirectory(sdf)
add_subdirectory(sdr)

add_subdirectory(usd)
add_subdirectory(usdUtils)

add_subdirectory(usdGeom)
add_subdirectory(usdHydra)
add_subdirectory(usdLux)
add_subdirectory(usdMedia)
#add_subdirectory(usdMtlx)
add_subdirectory(usdPhysics)
add_subdirectory(usdProc)
add_subdirectory(usdRender)
add_subdirectory(usdSemantics)
add_subdirectory(usdShade)
add_subdirectory(usdSkel)
add_subdirectory(usdUI)
add_subdirectory(usdVol)